...
    'GSU',
    'Mugar Memorial Library',
    'Fenway Campus',
    'Student Village',
    'West Campus',
    'East Campus',
    'Warren Towers',
    'Sleeper Hall',
    'Rich Hall',
    'Bay State Road brownstones',
    'BU Central',
    'FitRec',
    'Agganis Arena',
...
